--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -5,6 +5,25 @@
 /* * {
     outline: 1px solid red
 } */
-.nav {
-    @apply grid grid-cols-5 items-center  text-gray-500 font-semibold
+/* .nav {
+    @apply grid grid-cols-4 items-center  text-gray-500 font-semibold
+} */
+
+input[type="email"], 
+input[type="password"], 
+input[type="text"] {
+  @apply block w-full my-3 rounded-xl;
+  @apply  border-2 p-2 border-gray-300 bg-gray-200
+
+}
+button {
+  @apply block w-full text-gray-700 font-semibold border border-gray-300 rounded-xl py-2 px-6 mt-5;
+}
+
+button[type="submit"], .submit {
+    @apply border-0 bg-primary text-white
+}
+
+button.isLoading {
+  @apply bg-red-200 text-white cursor-not-allowed
 }
