--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -11,19 +11,25 @@
 
 input[type="email"], 
 input[type="password"], 
-input[type="text"] {
-  @apply block w-full my-3 rounded-xl;
+input[type="text"], 
+input[type="tel"] {
+  @apply block w-full mb-4 rounded-xl;
   @apply  border-2 p-2 border-gray-300 bg-gray-200
 
 }
 button {
-  @apply block w-full text-gray-700 font-semibold border border-gray-300 rounded-xl py-2 px-6 mt-5;
+  @apply block w-full text-gray-700 font-semibold border border-gray-300 rounded-xl py-2 px-6 mt-9;
 }
 
 button[type="submit"], .submit {
     @apply border-0 bg-primary text-white
 }
 
-button.isLoading {
+button.isLoading{
   @apply bg-red-200 text-white cursor-not-allowed
+}
+
+input:disabled {
+  @apply bg-gray-300 text-gray-500 cursor-not-allowed
+
 }
